apps/ai/openwebui/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openwebui
  labels:
    name: openwebio
    app.kubernetes.io/part-of: applications
    category: ai
